<resources>
    <string name="app_name">Age In Minutes</string>
    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="age">AGE</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="select_date">SELECT DATE</string>
    <string name="selected_date">Selected Date</string>
    <string name="in_minutes_till_date">In Minutes Till Date</string>
    <string name="selected_date_from_calendar">%1$d/%2$d/%3$d</string>
</resources>